--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: adVANtures
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
+color_scheme: dark
+
 url: https://van-richard.github.io
 
 # aux_links:
