--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ color_scheme: dark
 
 url: https://van-richard.github.io
 
-# aux_links:
-#   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+aux_links:
+   Template Repository: https://github.com/van-richard/CompChem
