--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ color_scheme: dark
 url: https://van-richard.github.io
 
 aux_links:
-   Template Repository: https://github.com/van-richard/CompChem
+   Github Repository: https://github.com/van-richard/CompChem
