modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: adVANtures
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Computational Chemistry Notes
+description: Guide to the world of Computational Chemistry
 theme: just-the-docs
 
 color_scheme: dark
