modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Computational Chemistry Notes
+title: Comp. Chem. Notes
 description: Guide to the world of Computational Chemistry
 theme: just-the-docs
 
